--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "cli-init",
+  "name": "@sherry/cli-init",
   "version": "1.0.0",
   "main": "index.js",
+  "private":false,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "bin": "./bin/index.js",
+  "bin": {
+    "cli-init": "bin/index.js"
+  },
   "author": "",
   "license": "ISC",
   "description": "",
